# ml-toolkit

./: .dockerignore  Dockerfile  Justfile  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: release.yml
src/: Justfile  mise.toml
src/cpu-x86_64/: pyproject.toml
src/cpu-x86_64/tests/: test_ml.py  test_torch.py
src/gpu-x86_64/: pyproject.toml
src/gpu-x86_64/tests/: test_env.py  test_torch.py
src/template/: pyproject.toml
src/template/tests/: test_ml.py  test_nlp.py  test_torch.py
